# iota_common

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: codeql-analysis.yml  main.yml  test.yml
cmake/: embear_logger.cmake  gen_hash_container.sh  keccak.cmake  mbedtls.cmake  unity.cmake  uthash.cmake
common/: BUILD  defs.h  doxy.txt  error_strings.h  errors.c  errors.h  stdint.h  version.h
common/crypto/: doxy.txt
common/crypto/curl-p/: README.md  const.c  const.h  digest.c  digest.h  doxy.txt  hamming.c  hamming.h  hashcash.c  hashcash.h  indices.h  pearl_diver.c  pearl_diver.h  ptrit.c  ptrit.h  search.h  trit.h
common/crypto/curl-p/tests/: test_cpu_hamming.c  test_cpu_hashcash.c  test_curlp.c  test_curlp_ptrit.c  test_curlp_ptrit.h
common/crypto/ftroika/: doxy.txt  ftroika.c  ftroika.h  general.h  round_constants.h  sbox_lookup.h  t27.h
common/crypto/ftroika/tests/: test_ftroika.c
common/crypto/iss/: doxy.txt  normalize.c  normalize.h
common/crypto/iss/v1/: iss.c  iss.c.inc  iss.h  iss.h.inc  iss_curl.c  iss_kerl.c  iss_kerl.h
common/crypto/iss/v1/tests/: test_iss.c  test_iss_curl.c  test_iss_kerl.c
common/crypto/iss/v2/: iss.c.inc  iss.h.inc  iss_curl.c  iss_curl.h  iss_kerl.c  iss_kerl.h
common/crypto/iss/v2/tests/: test_iss_curl.c
common/crypto/kerl/: bigint.c  bigint.h  converter.c  converter.h  doxy.txt  hash.c  hash.h  kerl.c  kerl.h
common/crypto/kerl/tests/: test_converter.c  test_kerl.c
common/crypto/sponge/: doxy.txt  sponge.c  sponge.h
common/crypto/sponge/tests/: test_sponge.c
common/crypto/troika/: doxy.txt  troika.c  troika.h
common/helpers/: checksum.c  checksum.h  digest.c  digest.h  doxy.txt  pow.c  pow.h  sign.c  sign.h
common/helpers/benchmark/: BUILD  bench_pow.c  bench_sign.c
common/helpers/tests/: test_checksum.c  test_digest.c  test_pow.c  test_sign.c
common/model/: bundle.c  bundle.h  doxy.txt  inputs.h  milestone.h  transaction.c  transaction.h  transfer.c  transfer.h  tryte_transaction.cc  tryte_transaction.h
common/model/tests/: BUILD  defs.h  test_bundle.c  test_inputs.c  test_transaction.c  test_transfer.c  test_tryte_transaction.cc
common/trinary/: BUILD  add.c  add.h  bytes.h  doxy.txt  flex_trit.c  flex_trit.h  ptrit.c  ptrit.h  ptrit_incr.c  ptrit_incr.h  trit_byte.c  trit_byte.h  trit_long.c  trit_long.h  trit_ptrit.h  trit_tryte.c  trit_tryte.h  trit_tryte_sse42.h  trits.c  trits.h  tryte.c  tryte.h  tryte_ascii.c  tryte_ascii.h  tryte_long.c  tryte_long.h
common/trinary/benchmark/: BUILD  bench_trit_tryte.c
common/trinary/tests/: BUILD  test_add.c  test_flex_trit.c  test_ptrits.c  test_trit_byte.c  test_trit_long.c  test_trit_ptrit.c  test_trit_tryte.c  test_trits.c  test_tryte.c  test_tryte_ascii.c  test_tryte_long.c
mobile/android/: Interface.cpp  Interface.h
mobile/android/demo/: DummyActivity.java
mobile/android/java/: Interface.java
mobile/ios/: Interface.h  Interface.mm
mobile/ios/Demo/Demo/: AppDelegate.h  ViewController.m
utils/: BUILD  bundle_miner.c  bundle_miner.h  char_buffer.c  char_buffer.h  doxy.txt  export.h  forced_inline.h  hash_indexed_map.c  hash_indexed_map.h  input_validators.c  input_validators.h  logger_helper.c  logger_helper.h  macros.h  memset_safe.c  memset_safe.h  merkle.c  merkle.h  system.c  system.h  time.c  time.h  windows.h
utils/containers/: bitset.c  bitset.h  map.c.tpl  map.h.tpl  map_generator.bzl  person_example.h  set.c.tpl  set.h.tpl  typed_container_generator.bzl
utils/containers/hash/: hash_array.c  hash_array.h  hash_map.c.tpl  hash_map.h.tpl  hash_queue.c.tpl  hash_queue.h.tpl  hash_set.c.tpl  hash_set.h.tpl  hash_stack.c.tpl  hash_stack.h.tpl
utils/containers/hash/tests/: defs.h  test_hash_array.c  test_hash_map.c  test_hash_queue.c  test_hash_stack.c
utils/containers/tests/: test_map.c  test_set.c
utils/handles/: cond.h  lock.h  rand.h  rw_lock.h  signal.h  thread.h
utils/tests/: BUILD  test_bundle_miner.c  test_handles_lock.c  test_input_validators.c  test_logger.c  test_merkle.c
